--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,6 @@ logging.level.org.hibernate.sql=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.com.ecommerce.project=DEBUG
 
+frontend.url=http://localhost:5173/
+
 
