Construct and Access image URLs for frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,5 +29,6 @@ logging.level.org.springframework.security=DEBUG
 logging.level.com.ecommerce.project=DEBUG
 
 frontend.url=http://localhost:5173/
+image.base.url=http://localhost:8080/images
 
 
